--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "three": "^0.128.0",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "fsevents": "*"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -39,5 +42,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arif-hstu/code-with-arif.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/arif-hstu/code-with-arif/issues"
+  },
+  "homepage": "/"
 }
